"""Ember agent package."""

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("//tools/lint:linters.bzl", "ruff_test")

exports_files(["devenv.nix"])

py_library(
    name = "ember",
    srcs = [
        "__main__.py",
        "app.py",
        "config.py",
        "handlers.py",
        "integrations/gitea.py",
        "matrix_client.py",
        "mcp_tools.py",
        "python_session.py",
        "runtime.py",
        "secrets.py",
        "system_prompt.py",
    ],
    data = [
        "docs/agent_ontology.md",
        "docs/pilot_plan.md",
        "resources/examples/matrix-client/quickstart.py",
        "resources/examples/python-session/demo.sh",
        "resources/examples/python-session/test_demo.sh",
        "system_prompt.md.j2",
    ],
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//agent_core",
        "//mcp_infra",
        "//mcp_infra/compositor",
        "//mcp_infra/enhanced",
        "//mcp_infra/exec",
        "//openai_utils",
        "@pypi//fastapi",
        "@pypi//fastmcp",
        "@pypi//ipykernel",
        "@pypi//ipython",
        "@pypi//jinja2",
        "@pypi//jupyter_client",
        "@pypi//kubernetes_asyncio",
        "@pypi//matrix_nio",
        "@pypi//mautrix",
        "@pypi//openai",
        "@pypi//pydantic",
        "@pypi//requests",
        "@pypi//uvicorn",
    ],
)

py_binary(
    name = "emberd",
    srcs = ["__main__.py"],
    main = "__main__.py",
    deps = [
        ":ember",
        "@pypi//uvicorn",
    ],
)

# TODO: ember-eval target disabled - src/ember/evals/runner.py does not exist
# py_binary(
#     name = "ember-eval",
#     srcs = ["src/ember/evals/runner.py"],
#     main = "src/ember/evals/runner.py",
#     deps = [":ember"],
# )

py_binary(
    name = "ember-python",
    srcs = ["python_session.py"],
    main = "python_session.py",
    deps = [":ember"],
)

py_test(
    name = "test_documentation_snippets",
    srcs = ["test_documentation_snippets.py"],
    imports = [".."],
    deps = [
        ":ember",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
    ],
)

py_test(
    name = "test_matrix_client",
    srcs = ["test_matrix_client.py"],
    imports = [".."],
    deps = [
        ":ember",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
    ],
)

py_test(
    name = "test_python_session",
    srcs = ["test_python_session.py"],
    imports = [".."],
    deps = [
        ":ember",
        "@pypi//pytest",
        "@pypi//pytest_asyncio",
    ],
)

ruff_test(
    name = "ruff",
    srcs = [":ember"],
)

# --- OCI Image ---

pkg_tar(
    name = "emberd_tar",
    srcs = [":emberd"],
    include_runfiles = True,
    package_dir = "/app",
    strip_prefix = ".",
)

oci_image(
    name = "image",
    base = "@python_slim_linux_amd64",
    entrypoint = ["/app/emberd"],
    env = {
        "PYTHONDONTWRITEBYTECODE": "1",
        "PYTHONUNBUFFERED": "1",
    },
    exposed_ports = ["8000/tcp"],
    tars = [":emberd_tar"],
    workdir = "/opt/emberd",
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["emberd:latest"],
)
